@@ -8,13 +8,13 @@ Global.IsSignal: FALSE
 Global.IsAtlfast: FALSE
 Global.Period: p13tev
 Global.cutfile: ZeroLeptonRun2/data/cutfile8TeV.dat
-Global.JetContainerKey: AntiKt4LCTopoJets
-Global.ElectronContainerKey: ElectronCollection
-Global.PhotonContainerKey: PhotonCollection
-Global.TauContainerKey: TauRecContainer
-Global.METContainerKey: MET_RefFinal
+Global.JetContainerKey: AntiKt4EMTopoJets
+Global.ElectronContainerKey: Electrons
+Global.PhotonContainerKey: Photons
+Global.TauContainerKey: TauJets
+Global.METContainerKey: MET_Core_AntiKt4EMTopo
 Global.JESNuisanceParameterSet: 0
-Global.DerivationTag: p1872
+Global.DerivationTag: p2353
 
 # ---------------------------  Run configuration ----------------------
 cafe.Run:  JobBookeeping cafe::IfPr(datamc) BuildSUSYObjects(susyobjs) 
@@ -38,6 +38,7 @@ isdata.Enforce: TRUE
 
 # ---------------------------  Vetos based on MC truth -----------------
 mcveto.Period: %{Global.Period}
+mcveto.TruthParticleContainerKey: TruthParticles
 
 # ---------------------------  Pileup reweighting ----------------------
 #pileuprw.forcedRunNumber: 195847
